Documentando e ajustando o GeJWT
