# APIs/docs/swagger.yaml
@@ -9,6 +9,18 @@ definitions:
       password:
         type: string
     type: object
+  dto.GetJWTInput:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
+  dto.GetJWTOutput:
+    properties:
+      access_token:
+        type: string
+    type: object
   handlers.Error:
     properties:
       message:
@@ -45,6 +57,36 @@ paths:
           schema:
             $ref: '#/definitions/handlers.Error'
       summary: Create User
+      tags:
+      - users
+  /user/gen_token:
+    post:
+      consumes:
+      - application/json
+      description: Get a user JWT
+      parameters:
+      - description: user credentials
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.GetJWTInput'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.GetJWTOutput'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.Error'
+      summary: Get a user JWT
       tags:
       - users
 securityDefinitions:
