# APIs/internal/dto/dto.go
@@ -15,3 +15,7 @@ type GetJWTInput struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
+
+type GetJWTOutput struct {
+	AccessToken string `json:"access_token"`
+}
