# APIs/internal/infra/webserver/handlers/user_handler.go
@@ -27,6 +27,17 @@ func NewUserHandler(db database.UserInterface) *UserHandler {
 	}
 }
 
+// GetJWT godoc
+// @Summary 		Get a user JWT
+// @Description 	Get a user JWT
+// @Tags 			users
+// @Accept 			json
+// @Produce 		json
+// @Param 			request 	body	dto.GetJWTInput	true	"user credentials"
+// @Success			201		{object} 	dto.GetJWTOutput
+// @Failure			404		{object}	Error
+// @Failure			500		{object}	Error
+// @Router			/user/gen_token		[post]
 func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 	jwt := r.Context().Value("jwt").(*jwtauth.JWTAuth)
 	experesin := r.Context().Value("experesin").(int)
@@ -40,7 +51,9 @@ func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 
 	u, err := h.UserDB.FindByEmail(user.Email)
 	if err != nil {
-		w.WriteHeader(http.StatusUnauthorized)
+		w.WriteHeader(http.StatusNotFound)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 
@@ -54,11 +67,7 @@ func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 		"exp": time.Now().Add(time.Second * time.Duration(experesin)).Unix(),
 	})
 
-	accessToken := struct {
-		AccessToken string `json:"access_token"`
-	}{
-		AccessToken: token,
-	}
+	accessToken := dto.GetJWTOutput{AccessToken: token}
 
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
@@ -66,7 +75,7 @@ func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 
 }
 
-// Create user godoc
+// CreateUser godoc
 // @Summary 		Create User
 // @Description 	Create User
 // @Tags 			users
